--- a/q/273956.html
+++ b/q/273956.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>044</td><td>Desmos</td><td>240707T012010Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273974#273974">Aiden Ch</a></td></tr>
-<tr d-ix="1"><td>023</td><td>Wolfram Language Mathematica</td><td>240706T223148Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273973#273973">Greg Mar</a></td></tr>
-<tr d-ix="2"><td>060</td><td>Google Sheets</td><td>240706T204015Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273971#273971">z..</a></td></tr>
-<tr d-ix="3"><td>031</td><td>Octave with Image Package</td><td>240706T155203Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273967#273967">Luis Men</a></td></tr>
-<tr d-ix="4"><td>047</td><td>Arturo</td><td>240706T193809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273970#273970">chunes</a></td></tr>
-<tr d-ix="5"><td>058</td><td>Python 3</td><td>240706T181911Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273969#273969">Mukundan</a></td></tr>
-<tr d-ix="6"><td>045</td><td>R</td><td>240706T163029Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273968#273968">pajonk</a></td></tr>
+<tr d-ix="0"><td>039</td><td>R</td><td>240706T163029Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273968#273968">pajonk</a></td></tr>
+<tr d-ix="1"><td>044</td><td>Desmos</td><td>240707T012010Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273974#273974">Aiden Ch</a></td></tr>
+<tr d-ix="2"><td>023</td><td>Wolfram Language Mathematica</td><td>240706T223148Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273973#273973">Greg Mar</a></td></tr>
+<tr d-ix="3"><td>060</td><td>Google Sheets</td><td>240706T204015Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273971#273971">z..</a></td></tr>
+<tr d-ix="4"><td>031</td><td>Octave with Image Package</td><td>240706T155203Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273967#273967">Luis Men</a></td></tr>
+<tr d-ix="5"><td>047</td><td>Arturo</td><td>240706T193809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273970#273970">chunes</a></td></tr>
+<tr d-ix="6"><td>058</td><td>Python 3</td><td>240706T181911Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273969#273969">Mukundan</a></td></tr>
 <tr d-ix="7"><td>003</td><td>Jelly</td><td>240706T142512Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273965#273965">Jonathan</a></td></tr>
 <tr d-ix="8"><td>008</td><td>Japt</td><td>240706T121748Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273962#273962">Shaggy</a></td></tr>
 <tr d-ix="9"><td>030</td><td>APL+WIN</td><td>240706T125528Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273964#273964">Graham</a></td></tr>
@@ -42,23 +42,35 @@
 <tr d-ix="13"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
 <tr d-ix="14"><td>004</td><td>Vyxal</td><td>240706T100546Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273958#273958">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 44 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>45</s> 39 bytes</h1>
+<p><em>Edit: -6 bytes thanks to <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">@Dominic van Essen</a>.</em></p>
+<pre class="lang-r prettyprint-override"><code>\(x,N,K)Map(\(i)median(x[1:K+i]),K:N-K)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY31WM0KnT8dLw1fRMLNGI0MjVzU1MyE_M0KqINrby1M2M1dbyt_HS9NaHKLdI0kjWMdRRMdRQsdBSMdBRMdBTMwVwjMMNEU8fQQMdYU0HZVMFUwQQITcHQBKJ_wQIIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<hr />
+<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a> + <a href="https://cran.r-project.org/package=zoo" rel="nofollow noreferrer">zoo</a>, 15 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>zoo::rollmedian
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhbrq_LzrayK8nNyclNTMhPzIKI3TdM0kjWMdRRMdRQsdBSMdBRMdBTMwVwjMMNEU8dYU0HZVMFUwQQITcHQBKJ5wQIIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>(Doesn't use the input <code>N</code>)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 44 bytes</h1>
 <pre><code>f(L,N,K)=[L[i+1...i+K].medianfori=[0...N-K]]
 </code></pre>
 <p><a href="https://www.desmos.com/calculator/gvrl3nwevb" rel="nofollow noreferrer">Try It On Desmos!</a></p>
 <p><a href="https://www.desmos.com/calculator/n6j0w6qhva" rel="nofollow noreferrer">Try It On Desmos! - Prettified</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 23 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 23 bytes</h1>
 <pre><code>Median/@##~Partition~1&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b73zc1JTMxT99BWbkuILGoJLMkMz@vzlDtf0BRZl5JtEJatEK1sY6pjoWOkY6JjjmQZQQkTWp1FIwVYmP/AwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a> Unnamed function expecting two arguments in the format <code>[{3,5,8,2,4,7,5,2,7,4},3]</code>. <code>##~Partition~1</code> is the same as <code>Partition[#1,#2,1]</code>, which creates the array of length-<code>#2</code> sublists of <code>#1</code>.</p>
 </div>
-<div id="pu2" class="pu"><h1>Google Sheets, 60 bytes</h1>
+<div id="pu3" class="pu"><h1>Google Sheets, 60 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=MAP(SEQUENCE(B1-B2+1),LAMBDA(i,MEDIAN(OFFSET(A4,i-1,,B2))))
 </code></pre>
 <p><a href="https://i.sstatic.net/XI1vr4Ic.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/XI1vr4Ic.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a> with Image Package, 31 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a> with Image Package, 31 bytes</h1>
 
 <pre class="lang-matlab prettyprint-override"><code>@(x,k)median(im2col(x,[1 k]),1)
 </code></pre>
@@ -72,13 +84,13 @@
 </code></pre>
 <p><code>median(...,1)</code> computes the median along the first dimension, that is, vertically.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 47 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 47 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$[a,k]-&gt;map 0..-size a k'i-&gt;median a\[i..i+k-1]
 </code></pre>
 <p><a href="https://i.sstatic.net/TMTZ5yjJ.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/TMTZ5yjJ.png" alt="enter image description here" /></a></p>
 <p>Needs modern Arturo so <code>median</code> isn't bugged. So no online link.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 58 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 58 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda n,x,k:[sorted(x[i:i+k])[k//2]for i in range(n-k+1)]
 </code></pre>
@@ -90,17 +102,6 @@
 <pre class="lang-python prettyprint-override"><code>lambda x,k:[sorted(x[i:i+k])[k//2]for i in range(len(x)-k+1)]
 </code></pre>
 <p><a href="https://tio.run/##ZY9PawMhEMXv/RSDJyVu0u4fGhYSyKVQ6KGQo/WwJW4rblWMhe2n346apIc6IMN7v3Ge/id@OtssI@zgbZmGr/fTADM3vTi7ENWJzkL3emUkE2azqeXoAmjQFsJgPxSdlKUzq8zqgckleZO2KtnOo3PP@jvAo63noGaPO5K/PvtJR0qg2gNhmRhC4GDQR/Rq86tZ9EjNjUVBJEUzuAVC@TLJZObKwn8cyn9cBt13RHCkJURZ4kOaE@Tp8PySkrwejkciRUZ36Q3JL6HRrPYk/48tDXSwhRpaeMSuxrvl0KSPdlgtVle6Xw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 45 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(x,N,K)Map(\(i)median(x[1:K+i-1]),1:(N-K+1))
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3dWM0KnT8dLw1fRMLNGI0MjVzU1MyE_M0KqINrby1M3UNYzV1DK00_HS9tQ01NaGaLNI0kjWMdRRMdRQsdBSMdBRMdBTMwVwjMMMEqMdAx1hTQdlUwVTBBAhNwdAEon_BAggNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<hr />
-<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a> + <a href="https://cran.r-project.org/package=zoo" rel="nofollow noreferrer">zoo</a>, 15 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>zoo::rollmedian
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhbrq_LzrayK8nNyclNTMhPzIKI3TdM0kjWMdRRMdRQsdBSMdBRMdBTMwVwjMMNEU8dYU0HZVMFUwQQITcHQBKJ5wQIIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>(Doesn't use the input <code>N</code>)</p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 4 </s> 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṡÆṁ
