--- a/q/273950.html
+++ b/q/273950.html
@@ -26,33 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>200</td><td>JavaScript Node.js</td><td>240707T113941Z</td><td><a href="https://codegolf.stackexchange.com/questions/273950/non-decreasing-fibonacci-sequence-modulo-m/273979#273979">emanresu</a></td></tr>
-<tr d-ix="1"><td>015</td><td>JavaScript Node.js</td><td>240707T110138Z</td><td><a href="https://codegolf.stackexchange.com/questions/273950/non-decreasing-fibonacci-sequence-modulo-m/273978#273978">Arnauld</a></td></tr>
+<tr d-ix="0"><td>015</td><td>Node.js 20.10.0</td><td>240707T110138Z</td><td><a href="https://codegolf.stackexchange.com/questions/273950/non-decreasing-fibonacci-sequence-modulo-m/273978#273978">Arnauld</a></td></tr>
+<tr d-ix="1"><td>200</td><td>JavaScript Node.js</td><td>240707T113941Z</td><td><a href="https://codegolf.stackexchange.com/questions/273950/non-decreasing-fibonacci-sequence-modulo-m/273979#273979">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, ~200ms on my machine</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>function f(a, b, m, k, n) {
-
-  let cache = Array(m).fill(0);
-  cache[a]++; cache[b]++;
-
-  for(let i = 2; i &lt; n; i++) {
-    tmp = b;
-    cache[b = (b + a) % m]++;
-    a = tmp;
-  }
-
-  i = 0;
-
-  while (k &gt;= 0) k -= cache[i++];
-
-  return i - 1;
-}
-</code></pre>
-<p><a href="https://tio.run/##fZHbTsMwDIbv9xS@QaRqB0maNqkKSFzwFIiLrrRQ1sPUlZMQzz5@Z5uASpBUsmP7/@wmT8VLsS3HZjMt@@G@2u3q576cmqGnWhQRrSLqIlpH1Af0sVgQtdVEZVE@VnRJ1@NYvIsuOKubthUyyJH3udviLgzzg79in6X1MAqWN5DqHOaCepgwZDRhTd0GqVXuDwcxAmJFIRUBnVDnUZwtEEc5Hz6ZzUzpu7w@Nm1FYk1XiAS0puXlgYVOd75krKbnsYdmSSpffO7Kod8ObXU2NV0lTt9Og8Ux0g4PohYqIv5kRI4N/bGCgM7PKZmJIdFQJRHZiNL4f7GeibXKDPfURgFiNBwMkWgFVsbBn@LYJdLNR5faZNxfO2xoLSCYiFE4xkAYewSkKrHzCQxK0dOm2OhpjYOJrTPaGr4MP5M5TpDE1s4AiVSaJeiXAZA55zlHgP0FSFIp5xMo5QFZvAcYp2P8gJQgpN7bE/YAVNnvO@AHvenv/ZvuvgA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Based on Arnauld's answer, but tracks the number of times each value has occured to speed things up substantially and avoid a costly <code>sort</code> call.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, ~1.5 sec.</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org/fr/blog/release/v20.10.0" rel="nofollow noreferrer">Node.js 20.10.0</a>, ~1.5 sec.</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>function f(a, b, m, k, n) {
   let A = [ a, b ];
@@ -80,6 +57,30 @@
 }
 </code></pre>
 <p><a href="https://tio.run/##fZDRjpswEEXf@Yp56coIJ7GNwUbZrJQP6BdEPJAsbEgIbAm7fajy7em1CVUXqQ1BY2bmnrnjU/FZXA99/T4s2u61vN@rj/Yw1F1LFSs47TldOJ05tSH9CoiacqAtbWhHrkj5OkCy6nrmCjUKao3wTC1CFI0aou2uzlFjiLQglVNE41HmIX2ji6cQ1RUbOzdAPz396XGJYmKRn79dXpv6UDLBaaHC9aOy78viPH7cAvcGU/eleGfsk1Md0uaFdu6Uh8tr1w/Mr@nTxU7kGLhHCL0lt9QP6L8Xw3FZNR32bGkFXFO2b8Mx5I@5PXpaLDIVpvwJeeFJr93D/pkWGzAjdxmnKMp3WO@Zer/CjX4e66ZkZ3qBbrTQl8NH3@IqTv4qYG0d3O6Hrr12TblsujdWMcnJ/XEX1gX6xy8MabWiJPgqhkRBlXAynNL4/2I1EyuZaTdTaQmIVjjARKIkWJlL/i2ObSLsDCCF0pmbryweaA0gcORQ@IyB0GYCpDIxcwcarZhpUjyYabRFiI3Vymh3Gd6TnhwksTEzQCKkchLMywDIrPWcCWC@AJJUiLkDKT0gi0eAtirGAkKAkPrTSBgB6DL2/hs" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, ~200ms on my machine</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>function f(a, b, m, k, n) {
+
+  let cache = Array(m).fill(0);
+  cache[a]++; cache[b]++;
+
+  for(let i = 2; i &lt; n; i++) {
+    tmp = b;
+    cache[b = (b + a) % m]++;
+    a = tmp;
+  }
+
+  i = 0;
+
+  while (k &gt;= 0) k -= cache[i++];
+
+  return i - 1;
+}
+</code></pre>
+<p><a href="https://tio.run/##fZHbTsMwDIbv9xS@QaRqB0maNqkKSFzwFIiLrrRQ1sPUlZMQzz5@Z5uASpBUsmP7/@wmT8VLsS3HZjMt@@G@2u3q576cmqGnWhQRrSLqIlpH1Af0sVgQtdVEZVE@VnRJ1@NYvIsuOKubthUyyJH3udviLgzzg79in6X1MAqWN5DqHOaCepgwZDRhTd0GqVXuDwcxAmJFIRUBnVDnUZwtEEc5Hz6ZzUzpu7w@Nm1FYk1XiAS0puXlgYVOd75krKbnsYdmSSpffO7Kod8ObXU2NV0lTt9Og8Ux0g4PohYqIv5kRI4N/bGCgM7PKZmJIdFQJRHZiNL4f7GeibXKDPfURgFiNBwMkWgFVsbBn@LYJdLNR5faZNxfO2xoLSCYiFE4xkAYewSkKrHzCQxK0dOm2OhpjYOJrTPaGr4MP5M5TpDE1s4AiVSaJeiXAZA55zlHgP0FSFIp5xMo5QFZvAcYp2P8gJQgpN7bE/YAVNnvO@AHvenv/ZvuvgA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Based on Arnauld's answer, but tracks the number of times each value has occured to speed things up substantially and avoid a costly <code>sort</code> call.</p>
+<p>Note: Arnauld's answer takes about 290-300ms on my machine.</p>
 </div>
 
 <table id="st">
