--- a/q/273950.html
+++ b/q/273950.html
@@ -26,10 +26,53 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>JavaScript Node.js</td><td>240707T113941Z</td><td><a href="https://codegolf.stackexchange.com/questions/273950/non-decreasing-fibonacci-sequence-modulo-m/273979#273979">emanresu</a></td></tr>
+<tr d-ix="0"><td>037</td><td>C gcc</td><td>240707T113941Z</td><td><a href="https://codegolf.stackexchange.com/questions/273950/non-decreasing-fibonacci-sequence-modulo-m/273979#273979">emanresu</a></td></tr>
 <tr d-ix="1"><td>015</td><td>Node.js 20.10.0</td><td>240707T110138Z</td><td><a href="https://codegolf.stackexchange.com/questions/273950/non-decreasing-fibonacci-sequence-modulo-m/273978#273978">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, ~43ms</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, ~3.7ms</h1>
+
+<pre class="lang-c prettyprint-override"><code>#include&lt;stdlib.h&gt;
+#include&lt;stdio.h&gt;
+
+int f(int a, int b, int m, int k, int n) {
+  int v1 = a; int v2 = b;
+
+  int tmp = 0;
+  int* cache = malloc(m * sizeof(int));
+  cache[a]++; cache[b]++;
+
+  for(int i = 2; i &lt; n; i++) {
+    tmp = v2;
+    v2 = (v2 + v1) % m;
+    v1 = tmp;
+    if (v1 == a &amp;&amp; v2 == b) {
+      cache[v1]--;
+
+      int llen = i - 1;
+      int mul = n / llen;
+      int rem = n % llen;
+     &#32;
+      for (int i = 0; i &lt; m; i++) cache[i] *= mul;
+      for (int i = 0; i &lt; rem; i++) {
+        tmp = v2;
+        v2 = (v2 + v1) % m;
+        v1 = tmp;
+        cache[v2]++;
+      }
+      break;
+    }
+    cache[v2]++;
+  }
+
+  int i = 0;
+
+  while (k &gt;= 0) k -= cache[i++];
+
+  return i - 1;
+}
+</code></pre>
+<p><a href="https://tio.run/##hZLRjpswEEXf8xWjrbIiARpsDAax2R9p8wAEGitAVmySSq3y7em1DVHSpVtAzHg8PnNnoPR/lOX1@kV1ZXPaVi/vx22jiq@719l9SB10ZKa6I9WOfuceaVNY01qzt6Zb0O8ZGffMaE15Zn0Ov8hmw9axfcM6yOxySWVe7ipE2rxpDqXT0pLe1a/qYOotFjrPpHzLN66bDX6hfU2sD73RpUDgqEcv1MG4rtVCQ7kzz8zKaHHwdiFxQXNqh7jWi1S7UjVyEEEL9PxsDqGDkTjqObON7xsR5gxENE3VgaPIJ5bdxdtTg3BHK5Nxv9NXrdmZP@wMBr3RrbnANtcOzVkJakPLtcZnnxxBjYeJfJzKZ5P5OJ27CXDzGWzoMtiir/K9DdrQX7mX8UewEvXq5041FTl7ekVkQXvy12ODrrsxKX11PPXdONrL1Yw1Vx05tq23HpHaeZpvv3dPXu0wj/QTeJRoQ/@48H/RakXRBAHnOI5GHkmP4vA/BD5B4CwVujoXDCTB4UBOxBmAqQ4@EMIkCpKpTgIuUq2EJ7gBkCBBm@ZhGYIj5I0Ss0hOaRHIR3UZ40Z1KRKYUCaCS6EHZNSJm5YolHKCEgWM63OonIKSJomBjRT5SIniIJjSwpihpKGliISH6CcIgImNZzEDBWkywRf/Aw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a> Compiled with <code>-O3</code>. Port of the below algorithm to C. Leaks a ton of memory but works.</p>
+<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, ~43ms</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>function f(a, b, m, k, n) {
   let v1 = a, v2 = b;
@@ -70,8 +113,7 @@
 }
 </code></pre>
 <p><a href="https://tio.run/##jVJtk5owEP7ur9gvd4UCJwkgMNTO9Hd0/IA01FQITkCvnfZ@u32S4I1605uKY8LuPi@764/6VI@NlocpUsM3cT63R9VMclDUenVI25D6kPYhKZ9@L4g6MdGJ0ZqQO3Gc22oxh5u62QlEvmhd//J6/6mVXefFfoW8zX2tN0FQzfetuRtoO2jPwCWgvMLxiRSOIHCCRMtlM6hx6MRTN3z3JHSZbxNTfwDmxCv75mitJw@/gSmjB@qtjimwtoFxb7JFGSLohB4fbS9oBprQo2fxQQuSCrluGA4Li3Bddp1Q4JEUEatMbURGjNFWNPVxFHQYximSqtGiF2q6QvbHDkBFS8fxh@LqKotym32w2eoiOXfFNlFU3Yb4VQgzpNchxm6I/TxEVy439HFtLLwyw7oW@qhowtZaqUfnYRK6H2lobdg0T9MAjqnZkfjZiHF8RxL4m829XdJ/Lertsohe5nOrRb13QRN6Md04B@b2vJOdIG9PnxHxaU/R@tJ/EGxsiRbTUat5f4uX8/V/q/VYSOYbh1SYg/7x8X0zvmxxCwaEA5WFlIe0St4H8zswZ2VqNHnKQJJyXGAi4wxcpQleg5Mii4s7AhbztDT6vMADbA4SODJUeE1AkeYXghXL8nsHKUqhma/wQDNPCxxJXqQ8T80wrKf04iBL8vyOIIsZNxDolSAoi8LyXAjyG4JsFcf3DhizBGXiCNKCJ2ggjsGwsjfH4AhQlRfnvw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Based on Arnauld's answer, but tracks the number of times each value has occured to speed things up substantially and avoid a costly <code>sort</code> call.</p>
-<p>Note: Arnauld's answer takes about 270-280ms on my machine.</p>
+<p>Based on Arnauld's answer, but tracks the number of times each value has occured to speed things up substantially and avoid a costly <code>sort</code> call. Arnauld's answer takes about 270-280ms on my machine.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org/fr/blog/release/v20.10.0" rel="nofollow noreferrer">Node.js 20.10.0</a>, ~1.5 sec.</h1>
 
