--- a/q/66197.html
+++ b/q/66197.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>065</td><td>Elixir</td><td>240705T100205Z</td><td><a href="https://codegolf.stackexchange.com/questions/66197/is-it-a-pangram/273938#273938">aloisdg</a></td></tr>
+<tr d-ix="0"><td>064</td><td>Elixir</td><td>240705T100205Z</td><td><a href="https://codegolf.stackexchange.com/questions/66197/is-it-a-pangram/273938#273938">aloisdg</a></td></tr>
 <tr d-ix="1"><td>053</td><td>Kotlin KotlinScript 53 Bytes</td><td>240705T225229Z</td><td><a href="https://codegolf.stackexchange.com/questions/66197/is-it-a-pangram/273949#273949">colmmurp</a></td></tr>
 <tr d-ix="2"><td>013</td><td>K ngn/k</td><td>231015T205919Z</td><td><a href="https://codegolf.stackexchange.com/questions/66197/is-it-a-pangram/266009#266009">coltim</a></td></tr>
 <tr d-ix="3"><td>014</td><td>Uiua</td><td>231014T224343Z</td><td><a href="https://codegolf.stackexchange.com/questions/66197/is-it-a-pangram/266001#266001">chunes</a></td></tr>
@@ -126,8 +126,8 @@
 <tr d-ix="97"><td>014</td><td>Japt</td><td>151210T044704Z</td><td><a href="https://codegolf.stackexchange.com/questions/66197/is-it-a-pangram/66230#66230">ETHprodu</a></td></tr>
 <tr d-ix="98"><td>038</td><td>Julia</td><td>151210T034747Z</td><td><a href="https://codegolf.stackexchange.com/questions/66197/is-it-a-pangram/66219#66219">Glen O</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://elixir-lang.org/" rel="nofollow noreferrer">Elixir</a>, <s>96</s> <s>95</s> <s>94</s> 65 bytes</h1>
-<pre><code>&amp; Enum.all?(?A..?Z, &amp; &amp;1 in String.to_charlist(String.upcase(s)))
+<div id="pu0" class="pu"><h1><a href="https://elixir-lang.org/" rel="nofollow noreferrer">Elixir</a>, <s>96</s> <s>95</s> <s>94</s> <s>65</s> 64 bytes</h1>
+<pre><code>&amp;Enum.all?(?A..?Z, &amp; &amp;1 in String.to_charlist(String.upcase(s)))
 </code></pre>
 <p><s><code>&amp;(&amp;1|&gt;String.upcase|&gt;String.to_charlist|&gt;Enum.filter(&amp; &amp;1 in ?A..?Z)|&gt;Enum.uniq|&gt;Enum.count&gt;25)</code></s></p>
 <p><a href="https://tio.run/##S83JrMgs@v9fTUPNsMYuuKQoMy9dr7QgObE4Fc4tyY9PzkgsysksLqmxc80rzdVLy8wpSS3SAGmyMzNRU7M0tFMz1NSEypbmZRZCmcn5pXkldkammv//AwA" rel="nofollow noreferrer" title="Elixir – Try It Online">Try it online!</a></p>
@@ -138,6 +138,7 @@ It upcases everything, then keeps the letters, then remove duplicate and finally
 <li>-1 byte because <code>&amp; &amp;1&gt;64&amp;&amp;91&gt;&amp;1</code> can be written <code>&amp; &amp;1 in ?A..?Z</code></li>
 <li>-33% with another algorithm</li>
 </ul>
+<p>Thanks Pul from exercism.org</p>
 </div>
 <div id="pu1" class="pu"><h1>Kotlin (KotlinScript) 53 Bytes</h1>
 <pre><code>val f={s:String-&gt;('A'..'Z').all{it in s.uppercase()}}
