--- a/q/273783.html
+++ b/q/273783.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>250</td><td>Pure bash</td><td>240707T155200Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273988#273988">F. Hauri</a></td></tr>
+<tr d-ix="0"><td>242</td><td>Pure bash</td><td>240707T155200Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273988#273988">F. Hauri</a></td></tr>
 <tr d-ix="1"><td>075</td><td>GolfScript</td><td>240702T072612Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273863#273863">Twilight</a></td></tr>
 <tr d-ix="2"><td>118</td><td>Python 3.8 prerelease</td><td>240705T124844Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273941#273941">Jakque</a></td></tr>
 <tr d-ix="3"><td>088</td><td>Zsh</td><td>240628T022041Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273829#273829">GammaFun</a></td></tr>
@@ -37,13 +37,11 @@
 <tr d-ix="8"><td>017</td><td>Charcoal</td><td>240625T000710Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273784#273784">Neil</a></td></tr>
 <tr d-ix="9"><td>078</td><td>J</td><td>240625T032739Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273790#273790">Conor O&</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Pure bash 250</h1>
-<p>note second <em>newline</em>, after double ampersand <code>&amp;&amp;</code> could be deleted, there are 250 useful characters:</p>
+<div id="pu0" class="pu"><h1>Pure bash 242</h1>
 
 <pre><code>for((a=$1;a;a&gt;&gt;=1)){ s=$[a&amp;1]$s;};l=${s//0} l=${#l} t=${#s} n=$((t-l))
-printf -vk '%*s' $(( l + 2*$n -1 ));p=;for ((c=t;c--;1)){ ((${s:c:1}))&amp;&amp;
-echo &quot;$k\\ $p&quot;&amp;&amp;p='\'||{ k=${k:1};printf '%s/\\ %s\n%s\\ \\\n' &quot;$k&quot; &quot;$p&quot; &quot;$k&quot;
-p='\/';};k=${k:1};};echo ' \'
+printf -vk '%*s' $[l+2*$n-1];p=;for((c=t;c--;)){ ((${s:c:1}))&amp;&amp;echo &quot;$k\\ $p&quot;&amp;&amp;p='\'||{ k=${k:1}
+printf '%s/\\ %s\n%s\\ \\\n' &quot;$k&quot; &quot;$p&quot; &quot;$k&quot;;ep='\/';};k=${k:1};};echo ' \'
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, <s>82</s> <s>81</s> <s>76</s> 75 bytes</h1>
