--- a/q/273783.html
+++ b/q/273783.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>175</td><td>Pure bash</td><td>240707T155200Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273988#273988">F. Hauri</a></td></tr>
+<tr d-ix="0"><td>170</td><td>Pure bash</td><td>240707T155200Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273988#273988">F. Hauri</a></td></tr>
 <tr d-ix="1"><td>075</td><td>GolfScript</td><td>240702T072612Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273863#273863">Twilight</a></td></tr>
 <tr d-ix="2"><td>118</td><td>Python 3.8 prerelease</td><td>240705T124844Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273941#273941">Jakque</a></td></tr>
 <tr d-ix="3"><td>088</td><td>Zsh</td><td>240628T022041Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273829#273829">GammaFun</a></td></tr>
@@ -37,17 +37,17 @@
 <tr d-ix="8"><td>017</td><td>Charcoal</td><td>240625T000710Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273784#273784">Neil</a></td></tr>
 <tr d-ix="9"><td>078</td><td>J</td><td>240625T032739Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273790#273790">Conor O&</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Pure bash 175</h1>
-<p>Reading other answer here and re-reading request, there is a version without int to bin conversion:</p>
+<div id="pu0" class="pu"><h1>Pure bash 170</h1>
+<p>Reading other answers here and re-reading request, there is a version without integer to binary conversion:</p>
 <pre class="lang-bash prettyprint-override"><code>l=${1//1};t=${#1};printf -vk '%*s' $[t+${#l}-1];p=;for((c=t;c--;)){
-((${1:c:1}))&amp;&amp;echo &quot;$k\\ $p&quot;&amp;&amp;p='\'||{
-k=${k:1};echo &quot;$k/\\ $p&quot;$'\n'&quot;$k\\ \\&quot;;p='\/';};k=${k:1};};echo ' \'
+((${1:c:1}))&amp;&amp;echo &quot;$k\ $p&quot;&amp;&amp;p=\\||{
+k=${k:1};echo &quot;$k/\ $p&quot;$'\n'&quot;$k\ \\&quot;;p=\\/;};k=${k:1};};echo \ \\
 </code></pre>
-<h1>Pure bash 209</h1>
+<h1>Pure bash 204</h1>
 <p>Full version expecting <em><strong>integer</strong></em> as argument.</p>
 <pre class="lang-bash prettyprint-override"><code>for((a=$1;a;a&gt;&gt;=1)){ s=$[a&amp;1]$s;};l=${s//1} t=${#s};printf -vk '%*s' $[t+${#l}-1]
-p=;for((c=t;c--;)){ ((${s:c:1}))&amp;&amp;echo &quot;$k\\ $p&quot;&amp;&amp;p='\'||{
-k=${k:1};echo &quot;$k/\\ $p&quot;$'\n'&quot;$k\\ \\&quot;;p='\/';};k=${k:1};};echo ' \'
+p=;for((c=t;c--;)){ ((${s:c:1}))&amp;&amp;echo &quot;$k\ $p&quot;&amp;&amp;p=\\||{
+k=${k:1};echo &quot;$k/\ $p&quot;$'\n'&quot;$k\ \\&quot;;p=\\/;};k=${k:1};};echo \ \\
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, <s>82</s> <s>81</s> <s>76</s> 75 bytes</h1>
